<resources>
    <string name="app_name">TomTom</string>
    <string name="near_by">Near by</string>
    <string name="no_data_available">No data available</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Start Time Preference [CHAR LIMIT=30] -->
    <string name="settings_start_time_key">start_time</string>
    <string name="settings_start_time_default">2018-01-01</string>
    <string name="settings_start_time_title">Start Time (YYYY-MM-DD)</string>

    <!-- Strings For Limit Preference [CHAR LIMIT=30] -->
    <string name="settings_limit_key">limit</string>
    <string name="settings_limit_default">10</string>
    <string name="settings_limit_title">Number Of Earthquakes Listed</string>





    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>


</resources>
